# git-matrix

./: Cargo.toml  README.md
git_matrix/: Cargo.toml
git_matrix/src/: error.rs  git.rs  lib.rs  matrix.rs
git_matrix/src/matrix/: events.rs
git_matrix_cli/: Cargo.toml
